--- a/produkt.html
+++ b/produkt.html
@@ -18,7 +18,7 @@
                 <ul class="icons">
                     <li class="bars"><a href="#"></a><i class="fa-solid fa-bars"></i></li>
                     <li class="user"><a href="#"></a><i class="fa-solid fa-user"></i></li>
-                    <li class="logo"><a href="http://127.0.0.1:5500/index.html">Sinbal</a></li>
+                    <li class="logo"><a href="index.html">Sinbal</a></li>
                     <li class="heart"><a href="#"></a><i class="fa-regular fa-heart"></i></li>
                     <li class="cart"><a href="#"></a><i class="fa-solid fa-cart-shopping"></i></li>
                 </ul>
@@ -30,7 +30,7 @@
           </header>
           <section class="filter-section">
               <ul class="breadcrumb">
-                <li><a href="http://127.0.0.1:5500/index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#">Menn</a></li>
                 <li><a href="#"><strong>Sneakers</strong></a></li>
               </ul> 
@@ -143,7 +143,7 @@
           <footer>
                     <ul class="footer-list">
                         <li><a href="#">&#8226; Om oss</a></li>
-                        <li><a href="http://127.0.0.1:5500/retur.html">&#8226; Retur</a></li>
+                        <li><a href="/retur.html">&#8226; Retur</a></li>
                         <li><a href="#">&#8226; Kontakt Oss</a></li>
                         <li><a href="#">&#8226; Ledige Stillinger</a></li>
                     </ul>
