--- a/retur.html
+++ b/retur.html
@@ -10,6 +10,9 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Limelight&display=swap" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="keywords" content="ungdom, tursko, sportsko, gave, pensko, skobutikk">
+      <meta name="author" content="Liza Bachalova">
+      <meta name="description" content="Sinbal er en butikk for kjøp av sko. Her finner du sko for unge mennesker for god pris!">
     </head>
     <body>
         <div id="grid-container3">
@@ -18,7 +21,7 @@
                         <ul class="icons">
                             <li class="bars"><a href="#"></a><i class="fa-solid fa-bars"></i></li>
                             <li class="user"><a href="#"></a><i class="fa-solid fa-user"></i></li>
-                            <li class="logo"><a href="http://127.0.0.1:5500/index.html">Sinbal</a></li>
+                            <li class="logo"><a href="index.html">Sinbal</a></li>
                             <li class="heart"><a href="#"></a><i class="fa-regular fa-heart"></i></li>
                             <li class="cart"><a href="#"></a><i class="fa-solid fa-cart-shopping"></i></li>
                         </ul>
@@ -31,7 +34,7 @@
             <aside>
                 <ul class="aside">
                     <li><a href="#">Om oss</a></li>
-                    <li><a href="http://127.0.0.1:5500/retur.html">Retur</a></li>
+                    <li><a href="retur.html">Retur</a></li>
                     <li><a href="#">kontakt oss</a></li>
                     <li><a href="#">Ledige stillinger</a></li>
                 </ul>
@@ -47,7 +50,7 @@
             <footer>
                     <ul class="footer-list">
                         <li>&#8226; Om oss</li>
-                        <li><a href="http://127.0.0.1:5500/retur.html">&#8226; Retur</a></li>
+                        <li><a href="retur.html">&#8226; Retur</a></li>
                         <li>&#8226; Kontakt Oss</li>
                         <li>&#8226; Ledige Stillinger</li>
                     </ul>
