ferdig med lighthouse

--- a/analyse.html
+++ b/analyse.html
@@ -55,8 +55,37 @@
                 <img class="ss39" src="img/Screenshot (39).png" alt="analyse">
                 
                 <p>Dette er forsiden etter endringer.</p>
+                <h4 >Endringer:</h4>
+                <ul class="endringer">
+                    <li> La til width og height til begge bildene.</li>
+                    <li>Endret fargene i headeren for å ha bedre kontrast</li>
+                    <li>Endret linkene fra # til startsiden istedenfor.</li>
+                    <li>La til meta description.</li>
+                    <li>Forstørret knappene under 'kategorier'.</li>
+                    <li>La til aria-label til iconene i headeren</li>
+                </ul>
+                <h3>Produktside</h3>
+                <p>Det er produktsiden før endringene.</p>
+                <h4>Endringer:</h4>
+                <ul>
+                    <li>Endret height til bildene</li>
+                    <li>Endret linkene fra # til startsiden</li>
+                    <li>La til aria-label</li>
+                    <li>Forstørret li elementer i footeren</li>
+                    <li>La til mer padding i li elementer i footeren</li>
+                </ul>
+                <h3>Returside</h3>
+                <p>Det er retursidene før endringene.</p>
+                <h4>Endringer:</h4>
+                <ul>
+                    <li>Endret linkene fra # til startsiden</li>
+                    <li>La til aria-label</li>
+                    <li>Forstørret og til mer padding i aside li elementer</li>
+                </ul>
             </section>
+            <section class="webaim">
 
+            </section>
             
 
 
