--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
           <header class="header">
                   
                   <ul class="icons">
-                      <li class="bars"><a href="index.html"></a><i class="fa-solid fa-bars"></i></li>
-                      <li class="user"><a href="index.html"></a><i class="fa-solid fa-user"></i></li>
+                      <li class="bars"><a href="index.html" aria-label="hamburger-meny"></a><i class="fa-solid fa-bars"></i></li>
+                      <li class="user"><a href="index.html" aria-label="account"></a><i class="fa-solid fa-user"></i></li>
                       <li class="logo"><a href="index.html">Sinbal</a></li>
-                      <li class="heart"><a href="index.html"></a><i class="fa-regular fa-heart"></i></li>
-                      <li class="cart"><a href="index.html"></a><i class="fa-solid fa-cart-shopping"></i></li>                       
+                      <li class="heart"><a href="index.html" aria-label="favorites"></a><i class="fa-regular fa-heart"></i></li>
+                      <li class="cart"><a href="index.html" aria-label="shopping-cart"></a><i class="fa-solid fa-cart-shopping"></i></li>                       
                   </ul>
                   <form>
                       <input type="text" name="search" placeholder="Hva leter du etter?" id="searchbar">
