--- a/produkt.html
+++ b/produkt.html
@@ -10,17 +10,20 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Limelight&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="ungdom, tursko, sportsko, gave, pensko, skobutikk">
+      <meta name="author" content="Liza Bachalova">
+      <meta name="description" content="Sinbal er en butikk for kjøp av sko. Her finner du sko for unge mennesker for god pris!">
 </head>
     <body>
         <div id="grid-container2">
           <header class="header">
             <nav>
                 <ul class="icons">
-                    <li class="bars"><a href="#"></a><i class="fa-solid fa-bars"></i></li>
-                    <li class="user"><a href="#"></a><i class="fa-solid fa-user"></i></li>
+                    <li class="bars"><a href="index.html" aria-label="hamburger-meny"></a><i class="fa-solid fa-bars"></i></li>
+                    <li class="user"><a href="index.html" aria-label="account"></a><i class="fa-solid fa-user"></i></li>
                     <li class="logo"><a href="index.html">Sinbal</a></li>
-                    <li class="heart"><a href="#"></a><i class="fa-regular fa-heart"></i></li>
-                    <li class="cart"><a href="#"></a><i class="fa-solid fa-cart-shopping"></i></li>
+                    <li class="heart"><a href="index.html" aria-label="favorites"></a><i class="fa-regular fa-heart"></i></li>
+                    <li class="cart"><a href="index.html" aria-label="shopping-cart"></a><i class="fa-solid fa-cart-shopping"></i></li>
                 </ul>
             </nav>
             <form>
