startet med webaim

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
                       <input type="submit" value="Søk">
                   </form>
           </header>
+          <h1 class="overskrift">
+            Sesongens nye favoritter
+          </h1>
           <!-- Kilde til bilde:
             https://placehold.co/600x400/EEE/31343C -->
           <img class="hovedbilde" src="img/placeholder.svg" alt="grå bilde">
