litt mer endringer

--- a/analyse.html
+++ b/analyse.html
@@ -95,12 +95,15 @@
                 </section>
                 <section class="webaim">
                     <h2>Webaim</h2>
-                    <p>Dette er en screenshot av resultatene før endringer</p>
+                    <h3>Forside</h3>
+                    <p>Dette er forsiden før endringer</p>
                     <img class="ss40" src="img/Screenshot (40).png" alt="analyse">
 
                     <h4>Endringer:</h4>
                     <ul>
                         <li>Forandret link fra # til startsiden</li>
+                        <li>La til h1 overskrift</li>
+                        <li>Endret farge til submit knappen for bedre kontrast</li>
                     </ul>
                 </section>
                 
