--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
                       <li class="cart"><a href="index.html" aria-label="shopping-cart"></a><i class="fa-solid fa-cart-shopping"></i></li>                       
                   </ul>
                   <form>
-                      <input type="text" name="search" placeholder="Hva leter du etter?" id="searchbar">
-                      <input type="submit" value="Søk">
+        
+                        <label for="search"><input type="text" name="search" placeholder="Hva leter du etter?" id="searchbar" ></label>
+                        <input type="submit" value="Søk">
                   </form>
+                 
           </header>
           <h1 class="overskrift">
             Sesongens nye favoritter
