--- a/analyse.html
+++ b/analyse.html
@@ -98,12 +98,40 @@
                     <h3>Forside</h3>
                     <p>Dette er forsiden før endringer</p>
                     <img class="ss40" src="img/Screenshot (40).png" alt="analyse">
+                    <p>Dette er forsiden etter endringer</p>
+                    <img class="ss49" src="img/Screenshot (49).png" alt="analyse">
 
                     <h4>Endringer:</h4>
                     <ul>
                         <li>Forandret link fra # til startsiden</li>
                         <li>La til h1 overskrift</li>
                         <li>Endret farge til submit knappen for bedre kontrast</li>
+                        <li>La til label til søkefelt så den er opplesbar</li>
+                    </ul>
+
+                    <h3>Produktside</h3>
+                    <p>Dette er produktsiden før endringer</p>
+                    <img class="ss51" src="img/Screenshot (51).png" alt="analyse">
+                    <p>Dette er forsiden etter endringer</p>
+                    <img class="ss52" src="img/Screenshot (52).png" alt="analyse">
+
+                    <h4>Endringer:</h4>
+                    <ul>
+                        <li>La til endringene til headeren og footeren slik som på forsiden</li>
+                        <li>Fjernet underline til sidetallet.</li>
+                        <li>La til h1 overskrift</li>
+                    </ul>
+
+                    <h3>Returside</h3>
+                    <p>Dette er returside før endringer</p>
+                    <img class="ss55" src="img/Screenshot (55).png" alt="analyse">
+                    <p>Dette er forsiden etter endringer</p>
+                    <img class="ss56" src="img/Screenshot (56).png" alt="analyse">
+
+                    <h4>Endringer:</h4>
+                    <ul>
+                        <li>La til endringene til headeren og footeren slik som på forsiden</li>
+                        <li>La til h1 overskrift</li>
                     </ul>
                 </section>
                 
