kommet i gang med tabelll

--- a/produkt.html
+++ b/produkt.html
@@ -62,74 +62,118 @@
               <section>
                   <!-- Kilde til bilder:
             https://placehold.co/600x400/EEE/31343C -->
-                    <img src="img/placeholder.svg" alt="grå bilde">
-                    <p><a href="#">Paolo sneakers</a></p>
-                    <span>999kr</span>
+                  <figure>
+                        <img src="img/placeholder.svg" alt="grå bilde">
+                        <figcaption class="figurecaption">Paolo sneakers</figcaption>
+                        <p><a href="#">Paolo sneakers</a></p>
+                        <span>999kr</span>
+                  </figure>
+                    
+                    
               </section>
               <section>
-                    <img src="img/placeholder.svg" alt="grå bilde">
-                    <p><a href="#">Xen sneakers</a></p>
-                    <span>999kr</span>
+                  <figure>
+                        <img src="img/placeholder.svg" alt="grå bilde">
+                        <figcaption class="figurecaption">Xen sneakers</figcaption>
+                        <p><a href="#">Xen sneakers</a></p>
+                        <span>999kr</span>
+                  </figure>
               </section>
               <section>
-                    <img src="img/placeholder.svg" alt="grå bilde">
-                    <p><a href="#">Mice sneakers</a></p>
-                    <span>999kr</span>
+                  <figure>
+                        <img src="img/placeholder.svg" alt="grå bilde">
+                        <figcaption class="figurecaption">Mice sneakers</figcaption>
+                        <p><a href="#">Mice sneakers</a></p>
+                        <span>999kr</span>
+                  </figure>
               </section>
               <section>
-                    <img src="img/placeholder.svg" alt="grå bilde">
-                    <p><a href="#">Zoro sneakers</a></p>
-                    <span>999kr</span>
+                  <figure>
+                        <img src="img/placeholder.svg" alt="grå bilde">
+                        <figcaption class="figurecaption">Zoro sneakers</figcaption>
+                        <p><a href="#">Zoro sneakers</a></p>
+                        <span>999kr</span>
+                  </figure>
               </section>
               <section>
-                    <img src="img/placeholder.svg" alt="grå bilde">
-                    <p><a href="#">Kai sneakers</a></p>
-                    <span>999kr</span>
+                  <figure>
+                        <img src="img/placeholder.svg" alt="grå bilde">
+                        <figcaption class="figurecaption">Kai sneakers</figcaption>
+                        <p><a href="#">Kai sneakers</a></p>
+                        <span>999kr</span>
+                  </figure>
               </section>
               <section>
-                    <img src="img/placeholder.svg" alt="grå bilde">
-                    <p><a href="#">Smoothie sneakers</a></p>
-                    <span>999kr</span>
+                  <figure>
+                        <img src="img/placeholder.svg" alt="grå bilde">
+                        <figcaption class="figurecaption">Smoothie sneakers</figcaption>
+                        <p><a href="#">Smoothie sneakers</a></p>
+                        <span>999kr</span>
+                  </figure>
               </section>
               <section>
-                    <img src="img/placeholder.svg" alt="grå bilde">
-                    <p><a href="#">Fun sneakers</a></p>
-                    <span>999kr</span>
+                  <figure>
+                        <img src="img/placeholder.svg" alt="grå bilde">
+                        <figcaption class="figurecaption">Fun sneakers</figcaption>
+                        <p><a href="#">Fun sneakers</a></p>
+                        <span>999kr</span>
+                  </figure>
               </section>
               <section>
-                    <img src="img/placeholder.svg" alt="grå bilde">
-                    <p><a href="#">Buddy sneakers</a></p>
-                    <span>999kr</span>
+                  <figure>
+                        <img src="img/placeholder.svg" alt="grå bilde">
+                        <figcaption class="figurecaption">Buddy sneakers</figcaption>
+                        <p><a href="#">Buddy sneakers</a></p>
+                        <span>999kr</span>
+                  </figure>
               </section>
               <section>
-                    <img src="img/placeholder.svg" alt="grå bilde">
-                    <p><a href="#">Luffy sneakers</a></p>
-                    <span>999kr</span>
+                  <figure>
+                        <img src="img/placeholder.svg" alt="grå bilde">
+                        <figcaption class="figurecaption">Luffy sneakers</figcaption>
+                        <p><a href="#">Luffy sneakers</a></p>
+                        <span>999kr</span>
+                  </figure>
               </section>
               <section>
-                    <img src="img/placeholder.svg" alt="grå bilde">
-                    <p><a href="#">Shams sneakers</a></p>
-                    <span>999kr</span>
+                  <figure>
+                        <img src="img/placeholder.svg" alt="grå bilde">
+                        <figcaption class="figurecaption">Shams sneakers</figcaption>
+                        <p><a href="#">Shams sneakers</a></p>
+                        <span>999kr</span>
+                  </figure>
               </section>
               <section>
-                    <img src="img/placeholder.svg" alt="grå bilde">
-                    <p><a href="#">Lime sneakers</a></p>
-                    <span>999kr</span>
+                  <figure>
+                        <img src="img/placeholder.svg" alt="grå bilde">
+                        <figcaption class="figurecaption">Lime sneakers</figcaption>
+                        <p><a href="#">Lime sneakers</a></p>
+                        <span>999kr</span>
+                  </figure>
               </section>
               <section>
-                    <img src="img/placeholder.svg" alt="grå bilde">
-                    <p><a href="#">Barty sneakers</a></p>
-                    <span>999kr</span>
+                  <figure>
+                        <img src="img/placeholder.svg" alt="grå bilde">
+                        <figcaption class="figurecaption">Barty sneakers</figcaption>
+                        <p><a href="#">Barty sneakers</a></p>
+                        <span>999kr</span>
+                  </figure>
               </section>
               <section>
-                    <img src="img/placeholder.svg" alt="grå bilde">
-                    <p><a href="#">Simpson sneaker</a></p>
-                    <span>999kr</span>
+                  <figure>
+                        <img src="img/placeholder.svg" alt="grå bilde">
+                        <figcaption class="figurecaption">Simpson sneakers</figcaption>
+                        <p><a href="#">Simpson sneakers</a></p>
+                        <span>999kr</span>
+                  </figure>
               </section>
               <section>
-                    <img src="img/placeholder.svg" alt="grå bilde">
-                    <p><a href="#"> Flex sneaker</a></p>
-                    <span>999kr</span>
+                  <figure>
+                        <img src="img/placeholder.svg" alt="grå bilde">
+                        <figcaption class="figurecaption">Flex sneakers</figcaption>
+                        <p><a href="#">Flex sneakers</a></p>
+                        <span>999kr</span>
+                  </figure>
               </section>
             </section>
           </main>
