--- a/produkt.html
+++ b/produkt.html
@@ -33,8 +33,9 @@
                  
           </header>
           <section class="filter-section">
-              <ul class="breadcrumb">
-                <li><a href="index.html">Home</a></li>
+              <ul class="breadcrumb" itemscope itemtype="https://schema.org/BreadcrumbList">
+                <li itemprop="itemListElement" itemscope
+                itemtype="https://schema.org/ListItem"><a href="index.html">Home</a></li>
                 <li><a href="#">Menn</a></li>
                 <li><a href="#"><strong>Sneakers</strong></a></li>
               </ul> 
