--- a/retur.html
+++ b/retur.html
@@ -11,12 +11,21 @@
         <link href="https://fonts.googleapis.com/css2?family=Limelight&display=swap" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="keywords" content="ungdom, tursko, sportsko, gave, pensko, skobutikk">
-      <meta name="author" content="Liza Bachalova">
-      <meta name="description" content="Sinbal er en butikk for kjøp av sko. Her finner du sko for unge mennesker for god pris!">
+        <meta name="author" content="Liza Bachalova">
+        <meta name="description" content="Sinbal er en butikk for kjøp av sko. Her finner du sko for unge mennesker for god pris!">
+  
+        <!--Facebook meta-->
+  
+        <meta property="og:title" content="Sinbal | Retur">
+        <meta property="og:url" content="https://itstud.hiof.no/~lizaab/oblig4/retur.html">
+        <meta property="og:image" content="img/placeholder.svg">
+        <meta property="og:description" content="Sko varer for menn">
+        <meta property="og:type" content="website">
     </head>
     <body>
         <div id="grid-container3">
             <header class="header">
+                <a href="#grid-container3" class="skip-link">Gå til hovedinnhold</a>
                   
                 <ul class="icons">
                     <li class="bars"><a href="index.html" aria-label="hamburger-meny"></a><i class="fa-solid fa-bars"></i></li>
